--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
             </div>
             <div class="project-box-footer">
               <div class="participants">
-                <a class="add-participant" style="color: #ff942e;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Giriş.pdf"><i class="fa-solid fa-download"></i></a>
-                <a class="add-participant2" style="color: #ff942e;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Giriş.pdf"><i class="fa-solid fa-eye"></i></a>
+                <a class="add-participant" style="color: #ff942e;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_1 Giriş.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #ff942e;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_1 Giriş.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
               <div class="days-left" style="color: #ff942e;">
@@ -242,7 +242,7 @@
           </div>
         </div>
         <div class="project-box-wrapper">
-          <div class="project-box" style="background-color: #e9e7fd;">
+          <div class="project-box" style="background-color: #dbf6fd;">
             <div class="project-box-header">
               <span>07.10.2022</span>
   
@@ -254,17 +254,17 @@
             <div class="box-progress-wrapper">
               <p class="box-progress-header">Dosyanın İçeriği</p>
               <div class="box-progress-bar">
-                <span class="box-progress" style="width: 43%; background-color: #4f3ff0"></span>
+                <span class="box-progress" style="width: 43%; background-color: #096c86"></span>
               </div>
               <p class="box-progress-percentage">43%</p>
             </div>
             <div class="project-box-footer">
               <div class="participants">
-                <a class="add-participant" style="color: #4f3ff0;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Temel Kavramlar.pdf"><i class="fa-solid fa-download"></i></a>
-                <a class="add-participant2" style="color: #4f3ff0;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Temel Kavramlar.pdf"><i class="fa-solid fa-eye"></i></a>
+                <a class="add-participant" style="color: #096c86;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_2 Temel Kavramlar.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #096c86;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_2 Temel Kavramlar.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
-              <div class="days-left" style="color: #4f3ff0;">
+              <div class="days-left" style="color: #096c86;">
                 Öğr. Gör. Arif GÜNEL
               </div>
               </a>
@@ -272,7 +272,7 @@
           </div>
         </div>
         <div class="project-box-wrapper">
-          <div class="project-box">
+          <div class="project-box" style="background-color: #c8f7dc;">
             <div class="project-box-header">
               <span>14.10.2022</span>
   
@@ -284,17 +284,17 @@
             <div class="box-progress-wrapper">
               <p class="box-progress-header">Dosyanın İçeriği</p>
               <div class="box-progress-bar">
-                <span class="box-progress" style="width: 24%; background-color: #096c86"></span>
+                <span class="box-progress" style="width: 24%; background-color: #34c471"></span>
               </div>
               <p class="box-progress-percentage">24%</p>
             </div>
             <div class="project-box-footer">
               <div class="participants">
-                <a class="add-participant" style="color: #096c86;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Veri Tipleri.pdf"><i class="fa-solid fa-download"></i></a>
-                <a class="add-participant2" style="color: #096c86;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Veri Tipleri.pdf"><i class="fa-solid fa-eye"></i></a>
+                <a class="add-participant" style="color: #34c471;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_3 Veri Tipleri.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #34c471;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_3 Veri Tipleri.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
-              <div class="days-left" style="color: #096c86;">
+              <div class="days-left" style="color: #34c471;">
                 Öğr. Gör. Arif GÜNEL
               </div>
               </a>
@@ -320,8 +320,8 @@
             </div>
             <div class="project-box-footer">
               <div class="participants">
-                <a class="add-participant" style="color: #df3670;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - SQL Server Managment Studio Mimarisi.pdf"><i class="fa-solid fa-download"></i></a>
-                <a class="add-participant2" style="color: #df3670;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - SQL Server Managment Studio Mimarisi.pdf"><i class="fa-solid fa-eye"></i></a>
+                <a class="add-participant" style="color: #df3670;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_4 SQL Server Managment Studio Mimarisi.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #df3670;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_4 SQL Server Managment Studio Mimarisi.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
               <div class="days-left" style="color: #df3670;">
@@ -332,7 +332,7 @@
           </div>
         </div>
         <div class="project-box-wrapper">
-          <div class="project-box" style="background-color: #c8f7dc;">
+          <div class="project-box" style="background-color: #e9e7fd;">
             <div class="project-box-header">
               <span>28.10.2022</span>
   
@@ -344,23 +344,203 @@
             <div class="box-progress-wrapper">
               <p class="box-progress-header">Dosyanın İçeriği</p>
               <div class="box-progress-bar">
-                <span class="box-progress" style="width: 40%; background-color: #34c471"></span>
+                <span class="box-progress" style="width: 40%; background-color: #4f3ff0"></span>
               </div>
               <p class="box-progress-percentage">40%</p>
             </div>
             <div class="project-box-footer">
               <div class="participants">
-                <a class="add-participant" style="color: #34c471;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Veri Tabanı Tasarlama Ve Normalizasyon.pdf"><i class="fa-solid fa-download"></i></a>
-                <a class="add-participant2" style="color: #34c471;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - Veri Tabanı Tasarlama Ve Normalizasyon.pdf"><i class="fa-solid fa-eye"></i></a>
+                <a class="add-participant" style="color: #4f3ff0;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_5 Veri Tabanı Tasarlama Ve Normalizasyon.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #4f3ff0;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_5 Veri Tabanı Tasarlama Ve Normalizasyon.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
-              <div class="days-left" style="color: #34c471;">
+              <div class="days-left" style="color: #4f3ff0;">
                 Öğr. Gör. Arif GÜNEL
               </div>
               </a>
             </div>
           </div>
         </div>
+        <div class="project-box-wrapper">
+          <div class="project-box" style="background-color: #e3f8c6;">
+            <div class="project-box-header">
+              <span>28.10.2022</span>
+  
+            </div>
+            <div class="project-box-content-header">
+              <p class="box-content-header">Sorgu Yazma Ve Veri Tanımlama</p>
+              <p class="box-content-subheader">T-SQL Ve Sorgu</p>
+            </div>
+            <div class="box-progress-wrapper">
+              <p class="box-progress-header">Dosyanın İçeriği</p>
+              <div class="box-progress-bar">
+                <span class="box-progress" style="width: 55%; background-color: #84d317"></span>
+              </div>
+              <p class="box-progress-percentage">55%</p>
+            </div>
+            <div class="project-box-footer">
+              <div class="participants">
+                <a class="add-participant" style="color: #84d317;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_6 Sorgu Yazma Ve Veri Tanımlama.pdf.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #84d317;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_6 Sorgu Yazma Ve Veri Tanımlama.pdf"><i class="fa-solid fa-eye"></i></a>
+              </div>
+              <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
+              <div class="days-left" style="color: #84d317 ;">
+                Öğr. Gör. Arif GÜNEL
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project-box-wrapper">
+          <div class="project-box" style="background-color: #ffd5fc;">
+            <div class="project-box-header">
+              <span>28.10.2022</span>
+  
+            </div>
+            <div class="project-box-content-header">
+              <p class="box-content-header">Veri İşleme Dili</p>
+              <p class="box-content-subheader">DML-Data Manuplation Language</p>
+            </div>
+            <div class="box-progress-wrapper">
+              <p class="box-progress-header">Dosyanın İçeriği</p>
+              <div class="box-progress-bar">
+                <span class="box-progress" style="width: 29%; background-color: #e340f9"></span>
+              </div>
+              <p class="box-progress-percentage">29%</p>
+            </div>
+            <div class="project-box-footer">
+              <div class="participants">
+                <a class="add-participant" style="color: #e340f9;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_7 Veri İşleme Dili.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #e340f9;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_7 Veri İşleme Dili.pdf"><i class="fa-solid fa-eye"></i></a>
+              </div>
+              <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
+              <div class="days-left" style="color: #e340f9;">
+                Öğr. Gör. Arif GÜNEL
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project-box-wrapper">
+          <div class="project-box" style="background-color: #debcff;">
+            <div class="project-box-header">
+              <span>28.10.2022</span>
+  
+            </div>
+            <div class="project-box-content-header">
+              <p class="box-content-header">Veri Kontrol Dili</p>
+              <p class="box-content-subheader">DCL-Data Control Language</p>
+            </div>
+            <div class="box-progress-wrapper">
+              <p class="box-progress-header">Dosyanın İçeriği</p>
+              <div class="box-progress-bar">
+                <span class="box-progress" style="width: 36%; background-color: #663399"></span>
+              </div>
+              <p class="box-progress-percentage">36%</p>
+            </div>
+            <div class="project-box-footer">
+              <div class="participants">
+                <a class="add-participant" style="color: #663399;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_8 Veri Kontrol Dili.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #663399;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_8 Veri Kontrol Dili.pdf"><i class="fa-solid fa-eye"></i></a>
+              </div>
+              <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
+              <div class="days-left" style="color: ##663399;">
+                Öğr. Gör. Arif GÜNEL
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project-box-wrapper">
+          <div class="project-box" style="background-color: #a0eae6;">
+            <div class="project-box-header">
+              <span>28.10.2022</span>
+  
+            </div>
+            <div class="project-box-content-header">
+              <p class="box-content-header">Sorgu Operatörleri</p>
+              <p class="box-content-subheader">Verileri Sorgulamak</p>
+            </div>
+            <div class="box-progress-wrapper">
+              <p class="box-progress-header">Dosyanın İçeriği</p>
+              <div class="box-progress-bar">
+                <span class="box-progress" style="width: 60%; background-color: #20B2AA"></span>
+              </div>
+              <p class="box-progress-percentage">60%</p>
+            </div>
+            <div class="project-box-footer">
+              <div class="participants">
+                <a class="add-participant" style="color: #20B2AA;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_9 Sorgu Operatörleri 1.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #20B2AA;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_9 Sorgu Operatörleri 1.pdf"><i class="fa-solid fa-eye"></i></a>
+              </div>
+              <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
+              <div class="days-left" style="color: #20B2AA;">
+                Öğr. Gör. Arif GÜNEL
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project-box-wrapper">
+          <div class="project-box" style="background-color: #f296d0 ;">
+            <div class="project-box-header">
+              <span>28.10.2022</span>
+  
+            </div>
+            <div class="project-box-content-header">
+              <p class="box-content-header">Sorgu Operatörleri 2</p>
+              <p class="box-content-subheader">Verileri Sorgulamak</p>
+            </div>
+            <div class="box-progress-wrapper">
+              <p class="box-progress-header">Dosyanın İçeriği</p>
+              <div class="box-progress-bar">
+                <span class="box-progress" style="width: 49%; background-color: #C71585"></span>
+              </div>
+              <p class="box-progress-percentage">49%</p>
+            </div>
+            <div class="project-box-footer">
+              <div class="participants">
+                <a class="add-participant" style="color: #C71585;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_10 Sorgu Operatörleri 2.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #C71585;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_10 Sorgu Operatörleri 2.pdf"><i class="fa-solid fa-eye"></i></a>
+              </div>
+              <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
+              <div class="days-left" style="color: #C71585;">
+                Öğr. Gör. Arif GÜNEL
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project-box-wrapper">
+          <div class="project-box" style="background-color: #b0a4f9;">
+            <div class="project-box-header">
+              <span>28.10.2022</span>
+  
+            </div>
+            <div class="project-box-content-header">
+              <p class="box-content-header">Join</p>
+              <p class="box-content-subheader">Tabloları Birleştirme</p>
+            </div>
+            <div class="box-progress-wrapper">
+              <p class="box-progress-header">Dosyanın İçeriği</p>
+              <div class="box-progress-bar">
+                <span class="box-progress" style="width: 36%; background-color: #483D8B"></span>
+              </div>
+              <p class="box-progress-percentage">36%</p>
+            </div>
+            <div class="project-box-footer">
+              <div class="participants">
+                <a class="add-participant" style="color: #483D8B;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_11 Join.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #483D8B;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_11 Join.pdf"><i class="fa-solid fa-eye"></i></a>
+              </div>
+              <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
+              <div class="days-left" style="color: #483D8B;">
+                Öğr. Gör. Arif GÜNEL
+              </div>
+              </a>
+            </div>
+          </div>
+        </div>  
       </div>
     </div>
   
