--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
         </li>
         <li>
           <div class="iocn-link">
+            <i class="fa-solid fa-skull-crossbones"></i>
+            <span class="link_name">Sınavlar</span>
+            <i id="ok" class="fa-solid fa-caret-down"></i>
+          </div>
+          <ul class="sub-menu">
+            <li><a class="link_name" href="#">Sınavlar</a></li>
+            <li><a href="https://bpakaryakit.github.io/WTT/exam.html">Web Tasarımın Temelleri</a></li>
+            <li><a href="https://bpakaryakit.github.io/TE/exam.html">Temel Elektronik</a></li>
+            <li><a href="https://bpakaryakit.github.io/PT/exam.html">Programlamanın Temelleri</a></li>
+            <li><a href="https://bpakaryakit.github.io/VTVYS/exam.html">Veri Tabanı Ve Yönetim Sistemleri</a></li>
+          </ul>
+        </li>
+        <li>
+          <div class="iocn-link">
             <a href="#">
               <i class="fa-solid fa-chalkboard-user"></i>
               <span class="link_name">Öğretmenler</span>
@@ -444,7 +458,7 @@
                 <a class="add-participant2" style="color: #663399;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_8 Veri Kontrol Dili.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
-              <div class="days-left" style="color: ##663399;">
+              <div class="days-left" style="color: #663399;">
                 Öğr. Gör. Arif GÜNEL
               </div>
               </a>
@@ -452,7 +466,7 @@
           </div>
         </div>
         <div class="project-box-wrapper">
-          <div class="project-box" style="background-color: #a0eae6;">
+          <div class="project-box" style="background-color: #94eebb;">
             <div class="project-box-header">
               <span>16.12.2022</span>
   
@@ -464,17 +478,17 @@
             <div class="box-progress-wrapper">
               <p class="box-progress-header">Dosyanın İçeriği</p>
               <div class="box-progress-bar">
-                <span class="box-progress" style="width: 60%; background-color: #20B2AA"></span>
+                <span class="box-progress" style="width: 60%; background-color: #2E8B57"></span>
               </div>
               <p class="box-progress-percentage">60%</p>
             </div>
             <div class="project-box-footer">
               <div class="participants">
-                <a class="add-participant" style="color: #20B2AA;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_9 Sorgu Operatörleri 1.pdf"><i class="fa-solid fa-download"></i></a>
-                <a class="add-participant2" style="color: #20B2AA;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_9 Sorgu Operatörleri 1.pdf"><i class="fa-solid fa-eye"></i></a>
+                <a class="add-participant" style="color: #2E8B57;" download href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_9 Sorgu Operatörleri 1.pdf"><i class="fa-solid fa-download"></i></a>
+                <a class="add-participant2" style="color: #2E8B57;" target="_blank" href="Veri Tabanı Ve Yönetim Sistemleri PDFS/VTVYS - 1_9 Sorgu Operatörleri 1.pdf"><i class="fa-solid fa-eye"></i></a>
               </div>
               <a class="teacher" target="_blank" href="https://akademik.yok.gov.tr/AkademikArama/AkademisyenGorevOgrenimBilgileri?islem=direct&authorId=109A83AD17C2A6CE">
-              <div class="days-left" style="color: #20B2AA;">
+              <div class="days-left" style="color: #2E8B57;">
                 Öğr. Gör. Arif GÜNEL
               </div>
               </a>
