--- a/exam.html
+++ b/exam.html
@@ -51,7 +51,7 @@
             <li><a href="https://bpakaryakit.github.io/TE/">Temel Elektronik</a></li>
             <li><a href="https://bpakaryakit.github.io/PT/">Programlamanın Temelleri</a></li>
             <li><a href="https://bpakaryakit.github.io/M/">Matematik 1</a></li>
-            <li><a href="#">Veri Tabanı Ve Yönetim Sistemleri</a></li>
+            <li><a href="https://bpakaryakit.github.io/VTVYS/">Veri Tabanı Ve Yönetim Sistemleri</a></li>
             <li><a href="https://bpakaryakit.github.io/IY/">İlk Yardım</a></li>
           </ul>
         </li>
@@ -66,7 +66,7 @@
             <li><a href="https://bpakaryakit.github.io/WTT/exam.html">Web Tasarımın Temelleri</a></li>
             <li><a href="https://bpakaryakit.github.io/TE/exam.html">Temel Elektronik</a></li>
             <li><a href="https://bpakaryakit.github.io/PT/exam.html">Programlamanın Temelleri</a></li>
-            <li><a href="https://bpakaryakit.github.io/VTVYS/exam.html">Veri Tabanı Ve Yönetim Sistemleri</a></li>
+            <li><a href="#">Veri Tabanı Ve Yönetim Sistemleri</a></li>
           </ul>
         </li>
         <li>
