--- a/exam.html
+++ b/exam.html
@@ -231,8 +231,8 @@
               <span>18.11.2022</span>
             </div>
             <div class="project-box-content-header">
-              <p class="box-content-header">Veri Tabanı Ve Yönetim Sistemleri Vize</p>
-              <p class="box-content-subheader">Sınav Kağıdı</p>
+              <p class="box-content-header">Vize</p>
+              <p class="box-content-subheader">Veri Tabanı Ve Yönetim Sistemleri</p>
             </div>
             <div class="box-progress-wrapper">
               <p class="box-progress-header">Dosyanın İçeriği</p>
@@ -261,8 +261,8 @@
   
             </div>
             <div class="project-box-content-header">
-              <p class="box-content-header">Veri Tabanı Ve Yönetim Sistemleri Final</p>
-              <p class="box-content-subheader">Sınav Kağıtları</p>
+              <p class="box-content-header">Final</p>
+              <p class="box-content-subheader">Veri Tabanı Ve Yönetim Sistemleri</p>
             </div>
             <div class="box-progress-wrapper">
               <p class="box-progress-header">Dosyanın İçeriği</p>
