--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
           <div class="project-box" style="background-color: #fee4cb;">
             <div class="project-box-header">
               <span>30.09.2022</span>
+              <div class="days-left">1. PDF - VİZE</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Giriş</p>
@@ -259,7 +260,7 @@
           <div class="project-box" style="background-color: #dbf6fd;">
             <div class="project-box-header">
               <span>07.10.2022</span>
-  
+              <div class="days-left">2. PDF - VİZE</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Temel Kavramlar</p>
@@ -289,7 +290,7 @@
           <div class="project-box" style="background-color: #c8f7dc;">
             <div class="project-box-header">
               <span>14.10.2022</span>
-  
+              <div class="days-left">3. PDF - VİZE</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Veri Tipleri</p>
@@ -319,7 +320,7 @@
           <div class="project-box" style="background-color: #ffd3e2;">
             <div class="project-box-header">
               <span>21.10.2022</span>
-  
+              <div class="days-left">4. PDF - VİZE</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">SQL Server Management</p>
@@ -349,7 +350,7 @@
           <div class="project-box" style="background-color: #e9e7fd;">
             <div class="project-box-header">
               <span>28.10.2022</span>
-  
+              <div class="days-left">5. PDF - VİZE</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Veri Bütünlüğü Ve Normalizasyon</p>
@@ -379,7 +380,7 @@
           <div class="project-box" style="background-color: #e3f8c6;">
             <div class="project-box-header">
               <span>02.12.2022</span>
-  
+              <div class="days-left">6. PDF - FİNAL</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Sorgu Yazma Ve Veri Tanımlama</p>
@@ -409,7 +410,7 @@
           <div class="project-box" style="background-color: #ffd5fc;">
             <div class="project-box-header">
               <span>09.12.2022</span>
-  
+              <div class="days-left">7. PDF - FİNAL</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Veri İşleme Dili</p>
@@ -439,7 +440,7 @@
           <div class="project-box" style="background-color: #debcff;">
             <div class="project-box-header">
               <span>09.12.2022</span>
-  
+              <div class="days-left">8. PDF - FİNAL</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Veri Kontrol Dili</p>
@@ -469,7 +470,7 @@
           <div class="project-box" style="background-color: #94eebb;">
             <div class="project-box-header">
               <span>16.12.2022</span>
-  
+              <div class="days-left">9. PDF - FİNAL</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Sorgu Operatörleri</p>
@@ -499,7 +500,7 @@
           <div class="project-box" style="background-color: #f296d0 ;">
             <div class="project-box-header">
               <span>19.12.2022</span>
-  
+              <div class="days-left">10. PDF - FİNAL</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Sorgu Operatörleri 2</p>
@@ -529,7 +530,7 @@
           <div class="project-box" style="background-color: #b0a4f9;">
             <div class="project-box-header">
               <span>30.12.2022</span>
-  
+              <div class="days-left">11. PDF - FİNAL</div>
             </div>
             <div class="project-box-content-header">
               <p class="box-content-header">Join</p>
